# ev-eureka

./: README.md  RF.py  blender.py  glm.py  main.py  pyproject.toml  requirements.txt
blender_models_v2/: blender_weights.json  final_glm_model_params.json  final_glm_preprocessor.joblib  glm_model_info.json  rf_full_feature_columns.json  rf_full_model.joblib  rf_full_preprocessor.joblib
datasets/: ev.csv
models/: model.joblib  rf_feature_columns.json  rf_imputer.joblib  rf_scaler.joblib  scaler.joblib
